[gd_scene load_steps=9 format=3 uid="uid://cvwuan084uqd3"]

[ext_resource type="Script" path="res://game/scenes/levels/levels/reactor_slot.gd" id="1_m715h"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rvbwl"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_che56"]
albedo_color = Color(0.247, 0.38, 0.377783, 1)
metallic = 1.0
metallic_specular = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lcu3o"]
albedo_color = Color(0.17, 0.17, 0.17, 1)
metallic = 1.0
metallic_specular = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i14ll"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(0, 1, 0.983333, 1)
emission_energy_multiplier = 4.0

[sub_resource type="CylinderMesh" id="CylinderMesh_y0664"]
material = SubResource("StandardMaterial3D_i14ll")
top_radius = 0.09
bottom_radius = 0.09
height = 0.4

[sub_resource type="CylinderMesh" id="CylinderMesh_4tqb0"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.05

[sub_resource type="CylinderMesh" id="CylinderMesh_k5tiy"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.3

[node name="ReactorSlot" type="StaticBody3D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_m715h")
area = "SET THIS"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_rvbwl")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]

[node name="Case" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.00172335)
radius = 0.2
height = 0.3
sides = 16
material = SubResource("StandardMaterial3D_che56")

[node name="Insert" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.0597387)
operation = 2
radius = 0.12
height = 0.3
sides = 16
material = SubResource("StandardMaterial3D_lcu3o")

[node name="Battery" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.0909668)
visible = false
mesh = SubResource("CylinderMesh_y0664")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Battery"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.189401, -8.27896e-09)
mesh = SubResource("CylinderMesh_4tqb0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Battery/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.167606, 7.32631e-09)
mesh = SubResource("CylinderMesh_k5tiy")

[node name="PowerOffLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.164105)
visible = false
light_color = Color(1, 0, 0, 1)
light_energy = 0.4
omni_range = 2.0

[connection signal="interacted" from="." to="." method="_on_interacted"]
